fix(style): documentation scrollbar conflict

--- a/website/src/pages/Documentation.css
+++ b/website/src/pages/Documentation.css
@@ -1,7 +1,3 @@
-body{
-    overflow-y: hidden;
-}
-
 h1{
     font-weight:300;
 }
@@ -11,6 +7,8 @@ h1{
     flex-direction: row;
     align-items: flex-start;
     width: 100%;
+    overflow: hidden;
+    position: fixed;
 }
 
 aside{
