--- a/website/src/pages/Download.css
+++ b/website/src/pages/Download.css
@@ -4,6 +4,10 @@
     box-sizing: border-box;
 }
 
+body{
+    overflow-y: auto;
+}
+
 .Download{
     position: relative;
     color: black;
